# beancount_reds_importers

./: .gitchangelog.rc  .gitignore  .ruff.toml  CHANGELOG.md  CHANGES  CONTRIBUTING.md  MANIFEST.in  README.md  conftest.py  fund_info.py  my.import  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conventionalcommits.yml  python-app.yml  pythonpackage.yml  pythonpublish.yml
beancount_reds_importers/ally/: __init__.py
beancount_reds_importers/amazongc/: __init__.py
beancount_reds_importers/amex/: __init__.py
beancount_reds_importers/chase/: __init__.py
beancount_reds_importers/citi/: __init__.py
beancount_reds_importers/discover/: __init__.py
beancount_reds_importers/discover_csv/: __init__.py
beancount_reds_importers/etrade/: __init__.py
beancount_reds_importers/example/: .ahoy.yml  OfxDownload.qfx  README.md  _config-smart.py  _config.py  fund_info.py  import-smart.py  import.py  import.sh  my-smart.import  my.beancount  my.import  run-examples.sh
beancount_reds_importers/fidelity/: __init__.py
beancount_reds_importers/fidelity_csv/: History_for_Account_X99999999.csv  History_for_Accounts.csv  __init__.py  combined.py  fidelity_csv.import  run_test.bash
beancount_reds_importers/fidelity_csv_brokerage_test/: fidelity_csv_brokerage_test.py
beancount_reds_importers/fidelity_csv_checking_test/: History_for_Account_X11111111.csv  fidelity_csv_checking_test.py
beancount_reds_importers/fidelity_csv_hsa_test/: History_for_Account_222222222.csv  fidelity_csv_hsa_test.py
beancount_reds_importers/importers/: ally.py  amex.py  becu.py  chase.py  citi.py  discover.py  etrade.py  fidelity.py  morganstanley.py  schwab.py  schwab_checking_csv.py  schwab_csv.py  schwab_csv_balances.py  schwabbank.py  target.py  tdameritrade.py  techcubank.py  vanguard.py  vanguard_screenscrape.py  workday.py
beancount_reds_importers/libimport/: banking.py  csv_multitable_reader.py  csvreader.py  investments.py  ofx.py  ofxreader.py  reader.py  xlsx_multitable_reader.py
beancount_reds_importers/libreader/: csv_multitable_reader.py  csvreader.py  jsonreader.py  ofxreader.py  pdfreader.py  reader.py  schwabjsonreader.py  tsvreader.py  xlsreader.py  xlsx_multitable_reader.py  xlsxreader.py  xmlreader.py
beancount_reds_importers/libtransactionbuilder/: banking.py  common.py  investments.py  paycheck.py  transactionbuilder.py
beancount_reds_importers/paypal/: __init__.py
(+243 files in other folders)
