[project]
name = "beancount_reds_importers"
#version = "0.1.0"
dynamic = ["version"]
license = "GPL-3.0"
description = "Importers for various institutions for Beancount"
readme = "README.md"
authors = [
  { name = "Red Street", email = "redstreet@users.noreply.github.com" },
]
requires-python = ">=3.11"
keywords = ["importer", "ingestor", "beancount", "accounting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "click >= 8.1.7",
  "beangulp >= 0.2.0",
  "beancount >= 3.0.0",
  "click_aliases >= 1.0.4",
  "dateparser >= 1.2.0",
  "ofxparse >= 0.21",
  "openpyxl >= 3.1.2",
  "packaging >= 23.1",
  "pdfplumber>=0.11.0",
  "petl >= 1.7.15",
  "tabulate >= 0.9.0",
  "tqdm >= 4.66.2",
  "requests>=2.32.3",
]

[project.urls]
Repository = "https://github.com/redstreet/beancount_reds_importers"

[project.scripts]
ofx-summarize = "beancount_reds_importers.util.ofx_summarize:summarize"
bean-download = "beancount_reds_importers.util.bean_download:cli"
reds-ibkr-flexquery-download = "beancount_reds_importers.importers.ibkr.flexquery_download:flexquery_download"

[project.optional-dependencies]
dev = ["isort", "pytest", "ruff"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# sources = ["beancount_reds_importers"]
[tool.hatch.build.targets.wheel.sources]
"beancount_reds_importers" = "beancount_reds_importers"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.ruff]
line-length = 99

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.isort]
profile = "black"

# A debug statement is breaking. Temporarily disabling until that can be fixed
[tool.pytest.ini_options]
norecursedirs = ["beancount_reds_importers/importers/mercurycards"]
filterwarnings = [
  # silence warning in ofxparse
  "ignore:Call to deprecated method findAll:DeprecationWarning",
]
